--- a/8-hack-these/2-coin-toss-game/styles/style.css
+++ b/8-hack-these/2-coin-toss-game/styles/style.css
@@ -1,33 +1,33 @@
 @keyframes spin {
     0% {
-        background: url('./heads.png');
+        background: url('../assets/heads.png');
     }
 
     25% {
-        background: url('./tails.png');
+        background: url('../assets/tails.png');
     }
 
     50% {
-        background: url('./heads.png');
+        background: url('../assets/heads.png');
     }
 
     75% {
-        background: url('./tails.png');
+        background: url('../assets/tails.png');
     }
 
     100% {
-        background: url('./heads.png');
+        background: url('../assets/heads.png');
     }
 }
 
 #image {
-    background: url('./heads.png');
+    background: url('../assets/heads.png');
     width: 227px;
     height: 337px;
 }
 
 .animate {
-    background: url('./heads.png');
+    background: url('../assets/heads.png');
     width: 227px;
     height: 337px;
     animation-name: spin;
